@@ -365,6 +365,23 @@ octave_udp::read (uint8_t *buf, unsigned int len, double readtimeout)
 
           if (FD_ISSET (get_fd (), &readfds))
             {
+              int available = get_bytesavailable();
+
+              // alloc new buffer
+              if (available > buffer_len)
+                {
+                  // get nearest 1k over if can
+                  if (available + 1024 > 0)
+                    {
+                      available = (available + 1023);
+                      available &= ~0x3ff;
+                    }
+                  delete [] input_buffer;
+                  input_buffer = 0;
+                  input_buffer = new uint8_t[available];
+                  buffer_len = available;
+                }
+
               addrlen = sizeof (addr);
               read_retval = ::recvfrom (get_fd (), reinterpret_cast<char *>(input_buffer), buffer_len,
                                         0, (struct sockaddr*)&addr, &addrlen);
@@ -406,14 +423,14 @@ octave_udp::read (uint8_t *buf, unsigned int len, double readtimeout)
           if (len - bytes_read < buffer_pos)
             {
               read_retval = len - bytes_read;
-              memcpy(buf, input_buffer, read_retval);
+              memcpy(&buf[bytes_read], input_buffer, read_retval);
               memcpy(&input_buffer[0], &input_buffer[read_retval], buffer_pos-read_retval);
               buffer_pos -= read_retval;
 	    }
           else
             {
               read_retval = buffer_pos;
-              memcpy(buf, input_buffer, buffer_pos);
+              memcpy(&buf[bytes_read], input_buffer, buffer_pos);
 	      buffer_pos = 0;
             }
 
