@@ -1,3 +1,12 @@
+Summary of important user-visible changes for instrument-control 0.9.1+
+-------------------------------------------------------------------
+
+  ** UDPPORT, UDP: increase buffer read size on larger packets
+
+  ** General updates to support Octave 9+
+
+  ** Updates to package documentation
+
 Summary of important user-visible changes for instrument-control 0.9.1
 -------------------------------------------------------------------
 
